# DS413-final-project

./: .env.example  .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  myst.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  unit-tests.yml
data/storage/: index.html
docs/: 1.0-paper.md  2.0-getting-started.md  3.0-eda.ipynb  4.0-training.ipynb  5.0-dataset-performance.ipynb  introduction.md  mkdocs.yml  myst.doi.bib  paper.md
docs/docs/: index.md
docs/docs/data/: storage.md
docs/images/: banner.avif
getting-started/: index.html
lib/: __init__.py  config.py  dataset.py
lib/architectures/: __init__.py  approaches.py  cnn.py
lib/data/: __init__.py  dataset.py
lib/data/manager/: __init__.py  app_menu.py  base_menu.py  deduplicate_files.py  download_dataset.py  mover_menu.py  splitter_menu.py
lib/data/storage/: __init__.py  huggingface.py  storage.py
lib/data/utils/: __init__.py  deduplicator.py  misc.py  splitter.py
lib/matplotlib/: color.py  styles.py
models/: combined_identification_model.pth  combined_identification_model_train_results.json  disease_detection_model.pth  disease_detection_model_train_results.json  symptom_identification_model.pth  symptom_identification_model_train_results.json
notebooks/: 1.0-modeling.ipynb  2.0-symptom-identification.ipynb  3.0-combined-identification.ipynb  4.0-dataset-performance.ipynb  5.0-results-plotting.ipynb  dwph-projects-eda.ipynb  eda.ipynb
references/: data-compilation.md
search/: search_index.json
tests/data/: test_dataset.py  test_storage.py
tests/data/utils/: test_deduplicator.py  test_splitter.py
