[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lib"
version = "0.0.1"
description = "Final Project for DS413"
authors = [
    { name = "Chris Irag", email = "chrisandrei.irag@1.ustp.edu.ph" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=1.1.2",
    "iprogress>=0.4",
    "ipykernel>=7.1.0",
    "kagglehub>=0.3.13",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "mkdocs",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.30.1",
    "pip",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "pytest",
    "python-dotenv",
    "questionary>=2.1.1",
    "ruff",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["lib"]
include = ["pyproject.toml", "lib/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["lib"]
force-sort-within-sections = true

