[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lib"
version = "0.0.1"
description = "Final Project for DS413"
authors = [{ name = "Chris Irag", email = "chrisandrei.irag@1.ustp.edu.ph" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "beartype>=0.22.5",
    "dotenv>=0.9.9",
    "faker>=38.0.0",
    "huggingface-hub>=1.1.2",
    "iprogress>=0.4",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "iragca>=0.2.6",
    "jupyter-book>=2.0.2",
    "kagglehub>=0.3.13",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "pip",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "pytest",
    "python-dotenv",
    "questionary>=2.1.1",
    "ruff",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["lib"]
include = ["pyproject.toml", "lib/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"] # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["lib"]
force-sort-within-sections = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
